--- a/backend/services/anomaly/Dockerfile.producer
+++ b/backend/services/anomaly/Dockerfile.producer
@@ -1,9 +1,9 @@
 # build
 FROM golang:1.24.6-alpine AS builder
 WORKDIR /app
-COPY go.mod go.sum ./
-RUN go mod download
 COPY . .
+WORKDIR /app/services/anomaly
+RUN go mod download
 RUN CGO_ENABLED=0 GOOS=linux go build -o /build/anomaly-producer ./internal/producer/main.go
 
 # runtime
